--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "preinstall": "npx -y only-allow pnpm",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
