--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,6 @@
 # testing
 /coverage
 
-# database
-/prisma/db.sqlite
-/prisma/db.sqlite-journal
-
 # next.js
 /.next/
 /out/
@@ -30,7 +26,6 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
 .env*.local
 
 # vercel
@@ -38,7 +33,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-
-# Unsupported package managers 
-package-lock.json
-yarn.lock
+next-env.d.ts
