--- a/package.json
+++ b/package.json
@@ -1,52 +1,34 @@
 {
-  "name": "t3app",
+  "name": "datamaker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "preinstall": "npx -y only-allow pnpm",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
+    "build": "next build",
     "start": "next start",
-    "migrate:dev": "npx prisma migrate dev"
+    "lint": "next lint",
+    "migrate:dev": "npx prisma migrate dev",
+    "preinstall": "npx -y only-allow pnpm",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.12",
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.5.0",
-    "@svgr/webpack": "^6.5.0",
-    "@tanstack/react-query": "^4.10.0",
-    "@trpc/client": "10.0.0-proxy-beta.17",
-    "@trpc/next": "10.0.0-proxy-beta.17",
-    "@trpc/react": "10.0.0-proxy-beta.17",
-    "@trpc/server": "10.0.0-proxy-beta.17",
-    "aminchirazi": "link:/Users/aminchirazi",
-    "next": "13.0.1",
-    "next-auth": "^4.12.3",
+    "@heroicons/react": "^2.0.13",
+    "@svgr/webpack": "^6.5.1",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.2",
+    "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "segoe-mdl2-icons": "^0.1.0",
-    "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.14",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "6.3.0"
+    "tailwindcss": "^3.2.2"
   }
 }
