--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate:dev": "npx prisma migrate dev"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.12",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
