--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.11.9",
