--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|tsx|ts|json)\"",
     "migrate:dev": "pnpx prisma migrate dev",
-    "preinstall": "pnpx -y only-allow pnpm",
+    "preinstall": "npx -y only-allow pnpm",
     "postinstall": "pnpx prisma generate",
     "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@prisma/client": "^4.5.0",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "prisma": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
@@ -33,10 +35,10 @@
     "concurrently": "^7.5.0",
     "eslint": "8.26.0",
     "eslint-plugin-react": "^7.31.10",
+    "husky": "^8.0.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.2",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.2.2"
   }
 }
