--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tooltip": "^4.5.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
