--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/prettier": "^2.7.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
