--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/prettier": "^2.7.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
