--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "18.0.8",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-auth": "^4.18.6",
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
