--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.7",
+    "react-spinners": "^0.13.7",
     "react-tooltip": "^4.5.0",
     "typescript": "4.8.4"
   },
