--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "bcryptjs": "^2.4.3",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "next-auth": "^4.18.6",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/prettier": "^2.7.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
