--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.0.2",
     "prisma": "^4.6.1",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.7",
     "react-tooltip": "^4.5.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/prettier": "^2.7.1",
+    "@types/react-csv": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
