--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.13",
     "@premieroctet/next-crud": "^2.3.1",
     "@prisma/client": "^4.6.1",
+    "@sendgrid/mail": "^7.7.0",
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^4.19.0",
     "@types/node": "18.11.9",
