--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.39.7",
     "react-spinners": "^0.13.7",
+    "react-toastify": "^9.1.1",
     "react-tooltip": "^4.5.0",
     "typescript": "4.8.4"
   },
