--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "bcryptjs": "^2.4.3",
+    "csvtojson": "^2.0.10",
     "eslint-config-next": "13.0.2",
     "framer-motion": "^8.0.2",
     "next": "13.0.2",
     "next-auth": "^4.18.6",
+    "openai": "^3.1.0",
     "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
